# zero2prod

./: Cargo.toml  Dockerfile
configuration/: production.yaml
migrations/: 20220609002510_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
