[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
config = "0.13.1"
serde = { version = "1", features = ["derive"]}
uuid = { version = "0.8.1", features = ["v4"]}
chrono = "0.4.15"
tracing = { version="0.1", features = ["log"]}
tracing-futures = "0.2.5"
tracing-subscriber = { version="0.2.12", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.2.2"
tracing-log = "0.1.3"
tracing-actix-web = "0.5.1"

[dependencies.sqlx]
version = "0.5.13"
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]

[dev-dependencies]
actix-rt = "2.7.0"
once_cell = "1.12.0"
reqwest = "0.11.10"
tokio = "1.19.2"
